updating to new antd stuff

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -46,6 +46,7 @@
       border-radius: @round-radius;
       border-top-right-radius: 0px;
       border-bottom-right-radius: 0px;
+      height: 55px;
     }
 
     .input-btn {
@@ -912,7 +913,7 @@
             }
 
             td {
-              &.text-gradient {
+              &.gradient-text {
                 padding-bottom: calc(@spacing-md - 4px);
               }
               &.market-table-asset {
