--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -40,8 +40,8 @@
     }
   }
 
-  // Jet Inputs
-  .jet-input {
+  // Token Input
+  .token-input {
     input {
       border-radius: @round-radius;
       border-top-right-radius: 0px;
@@ -813,7 +813,7 @@
             opacity: @subtle-opacity;
             letter-spacing: 0.5px;
           }
-          .jet-input {
+          .token-input {
             span {
               color: @black;
               font-size: @base-font-size;
@@ -1183,7 +1183,7 @@
       }
     }
     // Jet Input
-    .jet-input {
+    .token-input {
       .currency-input {
         input {
           width: 100%;
