add border to checkbox component

--- a/lib/jet-antd/lib/jet-antd.less
+++ b/lib/jet-antd/lib/jet-antd.less
@@ -659,6 +659,7 @@
         opacity: 1;
         border-radius: @btn-radius;
         box-shadow: @neu-shadow-inset;
+        border: 1px solid @jet-green;
         background: @grey;
         cursor: pointer;
 
