--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -1437,3 +1437,43 @@
   color: var(--jet-blue);
   white-space: pre-line;
 }
+
+.dialect-notfications {
+  background: black;
+  border-radius:3px #ABABAB solid;
+  padding: 10px;
+  width: 30rem;
+  height: 40rem;
+  position: absolute;
+  top: 4rem;
+  right: 0px;
+  z-index: 50;
+  border-radius: 1.5rem;
+  border-width: 1px;
+  border-color: rgba(171, 171, 171, 0.4);
+  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgb(23, 23, 23) 0px 20px 25px -5px, rgb(23, 23, 23) 0px 8px 10px -6px;
+
+  .header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-color: rgb(229, 231, 235);
+    color: white;
+    line-height: 24px;
+    padding: 12px 16px;
+    
+    > span {
+      color: white;
+      font-size: 18px;
+      font-weight: 500;
+    }
+  }
+
+  .bodyText {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
