--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -1439,8 +1439,8 @@
 }
 
 .dialect-notfications {
-  background: black;
-  border-radius:3px #ABABAB solid;
+  background: @white;
+  border-radius: @round-radius;
   padding: 10px;
   width: 30rem;
   height: 40rem;
@@ -1450,23 +1450,34 @@
   z-index: 50;
   border-radius: 1.5rem;
   border-width: 1px;
-  border-color: rgba(171, 171, 171, 0.4);
-  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgb(23, 23, 23) 0px 20px 25px -5px, rgb(23, 23, 23) 0px 8px 10px -6px;
+  box-shadow: @neu-table-shadow;
 
   .header {
+    line-height: 24px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    border-color: rgb(229, 231, 235);
-    color: white;
-    line-height: 24px;
-    padding: 12px 16px;
-    
-    > span {
-      color: white;
-      font-size: 18px;
-      font-weight: 500;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+
+    .sm:dt-hidden .dt-ml-3 {
+      display: hidden;
     }
+  }
+
+  .titleHeader {
+    font-size: 12px !important;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: @jet-green;
+  }
+  
+  .scrollbar {
+    overflow-y: overlay;
+    height: 100%;
   }
 
   .bodyText {
@@ -1475,5 +1486,39 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    > svg {
+      color: @jet-green;
+      width: 40px;
+      
+      > path {
+        fill: @black;
+      }
+    }
+  }
+
+  .divider {
+    background: @jet-green;
+    height: 1px;
+  }
+
+  .section {
+    padding: 0.5rem;
+    background-color: @light-grey;
+    border-width: 1px;
+    border-radius: 1rem;
+    border-color: #FFFFFF10;
+
+    > div {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      padding-left: 1rem;
+      padding-right: 1rem;
+      padding-top: 0.75rem;
+      padding-bottom: 0.75rem;
+      border-radius: 0.5rem;
+      background-color: #ABABAB20;
+    }
   }
 }
