new styles added

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -8,7 +8,7 @@
 ***************************/
 // Variables
 @neu-table-shadow: -4px 0px 10px @light-shadow, 2px 4px 8px @dark-shadow;
-@health-gradient: linear-gradient(90deg, @failure 0%, @warning 25%, @success 75%);
+@health-gradient: linear-gradient(90deg, @danger 0%, @warning 25%, @success 75%);
 // App
 .jet-app {
   // Modals
@@ -27,12 +27,11 @@
 
   // Info Icon
   .info {
-    color: @black;
+    color: @secondary-3;
     opacity: @disabled-opacity;
     margin-left: 3px !important;
     font-size: 9px;
     line-height: 9px;
-    cursor: pointer;
     transition: opacity @transition-duration ease-in-out;
 
     &:hover {
@@ -46,20 +45,25 @@
       border-radius: @round-radius;
       border-top-right-radius: 0px;
       border-bottom-right-radius: 0px;
-      height: 55px;
+      height: 45px;
     }
 
     .input-btn {
-      height: 55px;
+      height: 45px;
       margin-left: -5px;
       background: @gradient;
       border-top-right-radius: @round-radius;
       border-bottom-right-radius: @round-radius;
-      padding: 0 @spacing-md;
+      padding: 0 @spacing-sm;
       cursor: pointer;
       z-index: 10;
       svg path {
-        fill: @white;
+        fill: @primary;
+      }
+      .anticon {
+        font-size: 25px !important;
+        margin-right: 5px;
+        margin-bottom: -2px;
       }
 
       &:active {
@@ -73,18 +77,17 @@
 
       input {
         position: relative;
-        font-size: 20px;
         padding-left: 55px;
         padding-right: 80px;
       }
       span {
         font-size: 15px;
-        color: @black;
+        color: @primary;
         opacity: @disabled-opacity;
         margin: -2px 0;
       }
-      img {
-        width: 35px;
+      svg {
+        width: 25px;
         height: auto;
         position: absolute;
         top: 50%;
@@ -101,7 +104,8 @@
 
         span {
           font-size: @base-font-size;
-          margin: -1px 0;
+          color: @secondary-3 !important;
+          margin: -1px 0 !important;
 
           &:last-of-type {
             font-size: @xs-font-size;
@@ -110,27 +114,7 @@
       }
 
       + .input-btn {
-        height: 51px;
-        border: 2px solid @white;
-        border-left: unset;
-        background: unset;
         margin-left: unset;
-        &:hover {
-          background: unset;
-        }
-
-        &:active,
-        &.loading {
-          background: @white;
-
-          svg {
-            opacity: 1;
-            path {
-              opacity: inherit;
-              fill: @jet-green;
-            }
-          }
-        }
       }
     }
 
@@ -148,9 +132,6 @@
 
       .currency-input {
         + .input-btn {
-          &:hover {
-            background: unset;
-          }
           &:active {
             i {
               -webkit-text-fill-color: unset;
@@ -168,15 +149,15 @@
     width: 60px;
     margin: 0 auto;
     padding: unset;
-    background: @grey;
-    box-shadow: @neu-shadow-inset;
+    background: @primary-2;
+    box-shadow: @neu-shadow-inset-sm;
     border-radius: @round-radius;
     cursor: pointer;
     overflow: hidden;
     opacity: @subtle-opacity;
     transition: box-shadow @transition-duration ease-in-out;
     &:hover {
-      box-shadow: @neu-shadow-inset-low;
+      box-shadow: @neu-shadow-inset-2;
       opacity: 1;
     }
     &:active {
@@ -186,7 +167,7 @@
     div {
       width: 50%;
       height: 100%;
-      padding: 3px 5px;
+      padding: 2px 5px;
       &:first-of-type {
         padding-right: 1px;
       }
@@ -195,16 +176,16 @@
       }
 
       svg path {
-        fill: @black;
+        fill: @secondary;
         opacity: @disabled-opacity;
       }
 
       &.active {
-        background: @gradient;
+        background: @jet-green;
         box-shadow: @neu-shadow;
 
         svg path {
-          fill: @white;
+          fill: @primary-3;
           opacity: 1;
         }
       }
@@ -246,7 +227,7 @@
       width: 80%;
       height: 80%;
       border-radius: 100%;
-      background: @white;
+      background: @secondary;
       box-shadow: -2px -2px 6px 0px @light-shadow, 2px 2px 6px 0px @dark-shadow, inset 0px 0px 0px 0px @light-shadow,
         inset 0px 0px 0px 0px @dark-shadow;
 
@@ -303,7 +284,7 @@
     }
     svg {
       width: 156px;
-      stroke: @failure;
+      stroke: @danger;
 
       path:first-of-type {
         fill: none;
@@ -368,8 +349,8 @@
         margin: 2px @spacing-sm 0 @spacing-sm;
 
         &.borrowed {
-          background: @failure;
-          box-shadow: @neu-shadow-inset-failure;
+          background: @danger;
+          box-shadow: @neu-shadow-inset-danger;
         }
         &.liquid {
           background: @success;
@@ -381,6 +362,9 @@
 
         .reserve-subdetail {
           width: 50%;
+        }
+        &:last-of-type {
+          margin-bottom: @spacing-lg;
         }
       }
     }
@@ -396,6 +380,7 @@
       }
       svg {
         margin: 0 @spacing-xs;
+        fill: @secondary-3;
       }
     }
     &-asset {
@@ -427,7 +412,6 @@
 
         table {
           border-collapse: collapse;
-          background: @light-grey;
 
           thead {
             th {
@@ -440,7 +424,7 @@
             &:after {
               width: 150%;
               border: unset;
-              background: @dark-grey;
+              background: @secondary-5;
               left: -25%;
             }
           }
@@ -454,9 +438,6 @@
               text-align: center;
             }
             tr {
-              td {
-                padding: @spacing-md 0;
-              }
               &:first-of-type {
                 td {
                   padding: @spacing-lg 0 @spacing-xs 0;
@@ -495,30 +476,11 @@
   .copilot-modal {
     overflow: hidden;
     flex-wrap: nowrap;
-
-    img {
-      width: 60px;
-      height: auto;
-      margin: @spacing-xs 0;
-      padding: 7px;
-      border-radius: 100px;
-      background: @white;
-      box-shadow: @neu-shadow-inset;
-
-      &.success {
-        background: @success;
-        box-shadow: @neu-shadow-inset-success;
-      }
-      &.failure {
-        background: @failure;
-        box-shadow: @neu-shadow-inset-failure;
-      }
-    }
     .body {
       max-width: 275px;
 
       h2 {
-        font-size: @lg-font-size;
+        font-size: @xl-font-size;
       }
       button {
         margin: @spacing-md auto 0 auto;
@@ -554,7 +516,7 @@
         bottom: -22px;
         margin: @spacing-xs;
         font-size: @sm-font-size;
-        color: @dark-grey;
+        color: @secondary-5;
       }
 
       &-indicator {
@@ -566,7 +528,7 @@
           height: 0;
           border-left: 5px solid transparent;
           border-right: 5px solid transparent;
-          border-top: 8px solid @black;
+          border-top: 8px solid @primary;
         }
         &-label {
           position: absolute;
@@ -583,7 +545,7 @@
 
       &-status {
         padding: 0 @spacing-sm;
-        border-right: 1px solid @dark-grey;
+        border-right: 1px solid @secondary-5;
         opacity: 0.5;
         &:last-of-type {
           border-right: unset;
@@ -611,6 +573,7 @@
 
     // Cockpit top data
     &-top {
+      width: 100%;
       flex-wrap: wrap;
       margin-bottom: @spacing-xl;
 
@@ -620,13 +583,10 @@
       .trade-position-snapshot {
         min-width: 275px;
         border-radius: @border-radius;
-        box-shadow: @neu-shadow-inset;
+        box-shadow: @neu-shadow-inset-sm;
         padding: @spacing-sm @spacing-lg;
-        background: @light-grey;
+        background: @primary-2;
         transition: box-shadow @transition-duration ease-in-out;
-        &:hover {
-          box-shadow: @neu-shadow-inset-low;
-        }
 
         p {
           margin: -2px 0 0 0;
@@ -650,16 +610,16 @@
           }
         }
         .min-c-note {
-          max-width: 185px;
+          max-width: 160px;
           padding: unset;
 
           span {
             font-size: @xs-font-size;
-            color: @dark-grey;
+            color: @secondary-5;
           }
           i {
             font-size: @base-font-size;
-            color: @dark-grey;
+            color: @secondary-5;
             margin: 6px @spacing-sm 0 0;
           }
         }
@@ -680,7 +640,7 @@
         padding-top: calc(@spacing-lg * 1.75);
         border-top-left-radius: @border-radius;
         border-top-right-radius: @border-radius;
-        background: @gradient;
+        background: @primary-3;
         overflow: hidden;
 
         .trade-select-container {
@@ -691,10 +651,9 @@
 
           .trade-select {
             width: 25%;
-            border-right: 2px solid @white;
             box-shadow: inset 0px -5px 8px -5px rgba(0, 0, 0, 0.3);
             padding: @spacing-xs 0;
-            background: @grey;
+            background: @primary;
             opacity: @subtle-opacity;
             cursor: pointer;
             transition: opacity @transition-duration ease-in-out;
@@ -719,7 +678,7 @@
             }
             // Dark theme select
             &.dark {
-              background: @grey;
+              background: @primary;
               opacity: 1;
 
               &:hover {
@@ -740,12 +699,10 @@
               box-shadow: unset;
 
               p {
-                color: @white;
-                -webkit-text-fill-color: unset;
                 opacity: 1;
 
                 &::after {
-                  background: @white;
+                  background: @gradient;
                   opacity: inherit;
                 }
               }
@@ -773,21 +730,21 @@
                 left: 0;
                 width: 100%;
                 height: 1px;
-                background: @white;
+                background: @secondary;
               }
 
               &-selector {
                 text-align: center;
               }
               &-selection-item {
-                color: @white;
+                color: @secondary;
                 font-weight: @semi-bold-weight;
               }
               svg {
                 width: 15px;
                 height: 15px;
                 path {
-                  fill: @white;
+                  fill: @secondary;
                 }
               }
             }
@@ -803,19 +760,22 @@
             width: calc(50% - (@spacing-sm * 2));
           }
           p {
-            color: @white;
+            color: @secondary-2;
             margin: 0;
             font-size: 21px;
           }
           span {
-            color: @white;
+            color: @secondary-2;
             font-size: @xs-font-size;
             opacity: @subtle-opacity;
             letter-spacing: 0.5px;
           }
+          .bold-text {
+            color: @secondary-3;
+          }
           .jet-input {
             span {
-              color: @black;
+              color: @primary;
               font-size: @base-font-size;
 
               &:last-of-type {
@@ -825,21 +785,21 @@
             }
           }
           .ant-slider {
-            width: 365px;
+            width: 300px;
             margin-top: 5px;
 
             &-rail {
-              background: rgba(var(--white), 0.5);
+              background: rgba(var(--secondary), 0.2);
             }
             &-track {
-              background: @white;
+              background: @jet-green;
             }
             &-handle {
-              border-color: @grey;
+              border-color: @secondary-3;
             }
           }
           .info path {
-            fill: @white;
+            fill: @secondary;
             margin-top: 1px;
           }
 
@@ -868,25 +828,35 @@
           input {
             height: unset;
             padding: 10px 35px;
-            background: @grey;
           }
 
-          i {
+          .anticon {
             padding: @spacing-xs;
             position: absolute;
             top: 12px;
             left: 9px;
-            font-size: 15px;
+            font-size: 12px;
             opacity: @subtle-opacity;
+            svg path {
+              fill: @secondary-5;
+            }
           }
         }
 
         .table-container {
           width: 100%;
-          border-top: @spacing-xs solid @white;
+          border-top: @spacing-xs solid @primary;
           overflow-x: scroll;
           thead tr {
             cursor: unset;
+          }
+          tbody {
+            tr {
+              border-bottom: 2px solid @primary;
+              &:last-of-type {
+                border-bottom-width: 5px;
+              }
+            }
           }
 
           th,
@@ -904,8 +874,8 @@
           }
           tr {
             &.active {
-              box-shadow: @neu-shadow-inset-low;
-              background: @grey;
+              box-shadow: @neu-shadow-inset-2;
+              background: @primary-2;
 
               &:active {
                 box-shadow: @neu-shadow-inset;
@@ -913,21 +883,20 @@
             }
 
             td {
+              padding: @spacing-md 0;
               &.gradient-text {
                 padding-bottom: calc(@spacing-md - 4px);
               }
               &.market-table-asset {
                 span,
-                img {
+                svg {
                   opacity: 1;
                   position: absolute;
                   top: 50%;
                   transform: translateY(-50%);
                   left: 45px;
                 }
-                img {
-                  height: 25px;
-                  width: auto;
+                svg {
                   left: 15px;
                 }
                 span {
@@ -958,13 +927,13 @@
                 }
               }
               &.user-wallet-value {
-                color: @black;
+                color: @secondary;
               }
               &.user-collateral-value {
                 color: @jet-green;
               }
               &.user-loan-value {
-                color: @failure;
+                color: @danger;
               }
               svg {
                 margin-bottom: -4px;
@@ -978,20 +947,20 @@
                   opacity: inherit;
                 }
                 &.cell-border-right {
-                  border-color: @white;
+                  border-color: @primary-3;
                 }
               }
             }
           }
           @-moz-document url-prefix() {
             tr.active {
-              background: @white;
+              background: @secondary;
             }
           }
 
           // Right side dividers
           .cell-border-right {
-            border-right: 2px solid @grey;
+            border-right: 1px solid @primary-2;
           }
           // Clickable icons
           .clickable-icon {
@@ -1012,10 +981,16 @@
 
   // Transactions View
   .transaction-logs {
+    .jet-icon {
+      * {
+        fill: @jet-green;
+      }
+    }
     .table-container {
       width: 100%;
-      max-width: 600px;
+      max-width: 630px;
       margin: @spacing-lg 0;
+      padding: @spacing-lg;
       border-radius: @border-radius;
       box-shadow: @neu-shadow;
       overflow-x: scroll;
@@ -1025,10 +1000,6 @@
         padding: @spacing-md @spacing-lg @spacing-sm @spacing-lg;
         thead tr {
           cursor: unset;
-
-          th {
-            padding-bottom: @spacing-xs;
-          }
         }
         tr {
           &:last-of-type {
@@ -1067,6 +1038,9 @@
               opacity: 1;
             }
           }
+          td.asset {
+            padding-right: unset;
+          }
         }
       }
     }
@@ -1077,20 +1051,31 @@
     }
   }
 
-  // Settings View
+  // Settings Modal
   .settings {
-    width: 350px;
-    padding: @spacing-lg;
-    box-shadow: @neu-shadow-low;
-    border-radius: @border-radius;
-
+    padding-top: 35px;
+    h2 {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 45px;
+      background: @primary-2;
+      margin: unset;
+      text-transform: unset;
+    }
     .setting {
       &-title {
         margin: @spacing-sm 0 0 0;
+        color: @secondary-5;
       }
 
       input {
-        width: 275px;
+        width: 200px;
       }
 
       .rpc-info {
@@ -1103,7 +1088,6 @@
         width: 8px;
         height: 8px;
         border-radius: 50px;
-        margin: -1px @spacing-xs 0 @spacing-xs;
         opacity: @disabled-opacity;
       }
       .reset-rpc {
@@ -1135,14 +1119,13 @@
       }
     }
 
-    .socials {
-      a {
-        margin: @spacing-sm;
-        opacity: @subtle-opacity;
-        cursor: pointer;
-
-        &:hover {
-          opacity: 1;
+    .anticon {
+      font-size: 14px;
+      margin: @spacing-md @spacing-xs;
+      &:hover {
+        svg path {
+          transition: fill @transition-duration ease-out;
+          fill: @secondary;
         }
       }
     }
@@ -1175,7 +1158,7 @@
     // Modals
     .modal-content {
       &-header {
-        font-size: @header-font-size;
+        font-size: @lg-font-size;
         line-height: 32px;
       }
       &-subheader {
@@ -1220,7 +1203,7 @@
       }
       svg {
         width: 126px;
-        stroke: @failure;
+        stroke: @danger;
       }
     }
     // Reserve Detail Modal
@@ -1396,15 +1379,13 @@
                 }
                 &.market-table-asset {
                   span {
-                    &:first-of-type {
-                      top: 17px;
-                    }
-                    &:last-of-type {
-                      top: 32px;
-                    }
+                    display: none;
                   }
                 }
 
+                &:first-of-type {
+                  padding-right: unset;
+                }
                 &:last-of-type {
                   font-size: @lg-font-size;
                 }
@@ -1417,14 +1398,7 @@
     // Settings View
     .settings {
       width: 100%;
-      padding: unset;
       box-shadow: unset;
-
-      .setting {
-        input {
-          width: 240px;
-        }
-      }
     }
     // Init Failed
     .init-failed img {
