--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -661,7 +661,7 @@
                 bottom: 0;
                 height: 1px;
                 width: 100%;
-                background: @secondary-3;;
+                background: @secondary-3;
                 opacity: 0;
               }
             }
