--- a/lib/jet-antd/lib/jet-antd.less
+++ b/lib/jet-antd/lib/jet-antd.less
@@ -788,7 +788,7 @@
   }
   // Icon button
   .icon-btn {
-    padding: @spacing-sm;
+    padding: @spacing-sm @spacing-sm 7px @spacing-sm;
     margin: @spacing-xs;
     border-radius: @round-radius;
     font-size: @lg-font-size;
@@ -1644,7 +1644,7 @@
       max-width: 260px;
       background: @primary;
       border-radius: @lg-border-radius;
-      padding: @spacing-lg;
+      padding: @spacing-sm;
       overflow: hidden;
 
       .ant-modal-title {
