--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -622,7 +622,7 @@
       width: 100%;
       margin: 0 auto;
       border-radius: @border-radius;
-      box-shadow: @neu-table-shadow;
+      box-shadow: @neu-shadow-2;
       overflow: hidden;
 
       // Trade Panel
@@ -848,7 +848,7 @@
             tr {
               border-bottom: 2px solid @primary;
               &:last-of-type {
-                border-bottom-width: 5px;
+                border-bottom-width: 10px;
               }
             }
           }
