integrated radar endpoint

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -458,6 +458,17 @@
     .ant-modal-body {
       padding: unset !important;
     }
+
+    .radar-loader {
+      padding: 16px;
+      min-width: 240px;
+      display: flex;
+      justify-content: center;
+
+      span {
+        font-size: 2.5em;
+      }
+    }
   }
 
   // Copilot Modal
